--- a/background/background.tex
+++ b/background/background.tex
@@ -4,11 +4,11 @@
 
 Natural Language Processing (NLP) is a field of computer science and artificial intelligence that focuses on the interaction between computers and human language. It involves using techniques like machine learning and computational linguistics to help computers understand, interpret, and generate human language.
 
-That in itself was an example of the applications of NLP as that was an answer to a prompt given to ChatGPT \cite{ChatGPT}, a language model trained by OpenAI that is capable of understanding questions posed to it and giving responses, while remembering previous conversations with the user.
+The previous example itself was an example of the applications of NLP, being an answer to a prompt given to ChatGPT \cite{ChatGPT}. It exemplifies how NLP empowers language models like ChatGPT, developed by OpenAI, to comprehend user queries, provide accurate responses, and maintain contextual awareness by recalling past conversations. By leveraging advanced techniques, such as machine learning, ChatGPT exhibits the ability to understand and respond to prompts while retaining knowledge from ongoing interactions.
 
-ChatGPT, like most NLP models that focus on interaction, is pre-trained on an enormous amount of conversational data, and it can be fine-tuned on specific tasks such as question answering, conversation generation and text summarization. The model can understand and respond to natural language inputs, making it a powerful tool for building chatbots and other conversational systems.
+ChatGPT, like other NLP models designed for interactive tasks, undergoes pre-training on an extensive corpus of conversational data. Furthermore, it can be fine-tuned for specific applications such as question answering, conversation generation, and text summarization. With its capacity to comprehend and generate natural language inputs, ChatGPT becomes a powerful tool for constructing chatbots and various conversational systems.
 
-Along with chatbots, NLP is used for text classification. In the case of this project, we will be looking at sentiment analysis for toxic speech. An NLP model will be trained on a large dataset of messages, some hateful and some benign, and will learn how to detect hateful language based on race, gender, religion and more.
+In addition to chatbots, NLP finds utility in text classification tasks. In this project, we focus on sentiment analysis specifically for identifying toxic speech. An NLP model will be trained on a substantial dataset comprising both hateful and benign messages, enabling it to learn patterns and characteristics indicative of hateful language related to race, gender, religion, and other factors.
 
 \section{Transformers}
 
