--- a/interim_report.tex
+++ b/interim_report.tex
@@ -29,6 +29,10 @@
 
 \definecolor{darkgreen}{RGB}{0,150,0}
 \definecolor{darkpurple}{RGB}{122,18,150}
+\definecolor{topic_4}{RGB}{40, 161, 104}
+\definecolor{topic_6}{RGB}{201, 18, 18}
+\definecolor{topic_7}{RGB}{219, 77, 110}
+\definecolor{topic_10}{RGB}{184, 64, 182}
 
 \def\boxit[#1]#2#3{%
     \smash{\color{#1}\fboxrule=1pt\relax\fboxsep=2pt\relax%
@@ -36,7 +40,7 @@
 }
 
 
-\title{Detecting Hidden Purpose in NLP Models}
+\title{Language Classification with a Secondary Purpose}
 \author{Euan Scott-Watson}
 
 \begin{document}
