New chapter on future work to be done

--- a/interim_report.tex
+++ b/interim_report.tex
@@ -67,6 +67,7 @@
 \input{datasets/datasets.tex}
 \input{methodology/methodology.tex}
 \input{project_plan/project_plan.tex}
+\input{future_work/future_work.tex}
 \input{conclusion/conclusion.tex}
 \input{appendix/appendix.tex}
 
