New title and removed project plan

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -267,7 +267,7 @@
     \label{fig:topic_roc_auc_scores}
 \end{figure}
 
-\chapter{Topic-Based Models t-SNE Plots}
+\chapter{Topic-Based Secondary Models t-SNE Plots}
 \label{app:t_sne}
 
 \begin{figure}[ht]
