--- a/interim_report.tex
+++ b/interim_report.tex
@@ -40,7 +40,7 @@
 }
 
 
-\title{Language Classification with a Secondary Purpose}
+\title{Backdoor Attacks against NLP Models with Topic-Based Triggers}
 \author{Euan Scott-Watson}
 
 \begin{document}
@@ -66,7 +66,6 @@
 \input{ethical_issues/ethical_issues.tex}
 \input{datasets/datasets.tex}
 \input{methodology/methodology.tex}
-\input{project_plan/project_plan.tex}
 \input{future_work/future_work.tex}
 \input{conclusion/conclusion.tex}
 \input{appendix/appendix.tex}
